# tree-sitter-erlang

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
bindings/c/: tree-sitter-erlang.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_erlang/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterErlang/: erlang.h
bindings/swift/TreeSitterErlangTests/: TreeSitterErlangTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
src/tree_sitter/: alloc.h  array.h  parser.h
test/corpus/: attributes.txt  doc-attributes.txt  expected_errors.txt  expr.txt  fault_tolerance.txt  fragment.txt  macros.txt  otp29.txt  pat_expr.txt  ssr.txt  string_delimiters.txt  strings.txt  types.txt
