[package]
categories = ["parsing", "text-editors"]
description = "erlang grammar for the tree-sitter parsing library"
repository = "https://github.com/WhatsApp/tree-sitter-erlang"
edition = "2018"
keywords = ["incremental", "parsing", "erlang"]
license = "MIT"
name = "tree-sitter-erlang"
version = "0.13.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.1.10"

[dev-dependencies]
tree-sitter = "0.23"
